// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/draft-orders POST /admin/draft-orders creates a draft order with a billing address that is an AddressPayload and a shipping address that is an ID 1`] = `
Object {
  "address_1": null,
  "address_2": null,
  "city": null,
  "company": null,
  "country_code": "us",
  "created_at": Any<String>,
  "customer_id": null,
  "deleted_at": null,
  "first_name": "oli",
  "id": "oli-shipping",
  "last_name": "test",
  "metadata": null,
  "phone": null,
  "postal_code": null,
  "province": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/draft-orders POST /admin/draft-orders creates a draft order with a billing address that is an AddressPayload and a shipping address that is an ID 2`] = `
Object {
  "address_1": null,
  "address_2": null,
  "city": null,
  "company": null,
  "country_code": "us",
  "created_at": Any<String>,
  "customer_id": null,
  "deleted_at": null,
  "first_name": "kap",
  "id": Any<String>,
  "last_name": "test",
  "metadata": null,
  "phone": null,
  "postal_code": null,
  "province": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/draft-orders POST /admin/draft-orders creates a draft order with a shipping address that is an AddressPayload and a billing adress that is an ID 1`] = `
Object {
  "address_1": null,
  "address_2": null,
  "city": null,
  "company": null,
  "country_code": "us",
  "created_at": Any<String>,
  "customer_id": null,
  "deleted_at": null,
  "first_name": "oli",
  "id": "oli-shipping",
  "last_name": "test",
  "metadata": null,
  "phone": null,
  "postal_code": null,
  "province": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/draft-orders POST /admin/draft-orders creates a draft order with a shipping address that is an AddressPayload and a billing adress that is an ID 2`] = `
Object {
  "address_1": null,
  "address_2": null,
  "city": null,
  "company": null,
  "country_code": "us",
  "created_at": Any<String>,
  "customer_id": null,
  "deleted_at": null,
  "first_name": "kap",
  "id": Any<String>,
  "last_name": "test",
  "metadata": null,
  "phone": null,
  "postal_code": null,
  "province": null,
  "updated_at": Any<String>,
}
`;
